# MDK

./: README.md
ObjectManagement/: CMakeLists.txt  mdkDebugMarco.h  mdkImageFilter.cpp  mdkImageFilter.h  mdkObjectBase.cpp  mdkObjectBase.h  mdkObjectBaseInfo.h  mdkObjectManager.cpp  test.cpp
ObjectManagement/Code/: CMakeLists.txt
Source/: CMakeLists.txt  mdkDenseMatrix.h  mdkDenseMatrix.hpp
Source/CombinatorialMath/: mdkCombinatorialMath.h  mdkCombinatorialMath_Function_Part0.h  mdkCombinatorialMath_Function_Part0.hpp
Source/Common/: CMakeLists.txt  CMakeLists_back.txt  mdk3DImage.h  mdk3DImage.hpp  mdk3DImageSequence.h  mdk3DImageSequence.hpp  mdk3DImageVoxel.cpp  mdk3DImageVoxel.h  mdk3DImageVoxel.hpp  mdkCommonType.h  mdkConstant.h  mdkConstant.hpp  mdkDataArray.h  mdkDataArray.hpp  mdkDataContainer.h  mdkDataContainer.hpp  mdkDiagonalMatrix.h  mdkIdentityMatrix.h  mdkIdentityMatrix.hpp  mdkLinearAlgebra.h  mdkLinearAlgebra.hpp  mdkMatrix.h  mdkMatrix.hpp  mdkOSPlatformConfig.h  mdkObject.cpp  mdkObject.h  mdkProcessObject.cpp  mdkProcessObject.h  mdkProcessOutputObject.cpp  mdkProcessOutputObject.h  mdkSharedDataObject.h  mdkSharedDataObject.hpp  mdkSimpleDataArray.h  mdkSimpleDataArray.hpp  mdkSimpleDataContainer.h  mdkSimpleDataContainer.hpp  mdkSymbol.h  mdkType.h  mdkType.hpp  mdkTypeInference.h  (+5 more)
Source/Container/: mdkContainer.h  mdkObjectArray.h  mdkObjectArray.hpp  mdkSimpleObjectArray.h  mdkSimpleObjectArray.hpp  mdkStdObjectVector.h  mdkStdObjectVector.hpp
Source/DataContainer/: mdkDataArray.h  mdkDataArray.hpp  mdkSimpleDataArray.h  mdkSimpleDataArray.hpp
Source/DataStructureConversion/: mdkDataStructureConversion.h  mdkITKDataObject_FileIO.h  mdkITKDataObject_FileIO.hpp  mdkITKDataStructureConversion.h  mdkITKDataStructureConversion.hpp  mdkQTDataStructureConversion.cpp  mdkQTDataStructureConversion.h  mdkTypeToOpenCVTranslation.h  mdkTypeToOpenCVTranslation.hpp  mdkVTKDataObject_FileIO.cpp  mdkVTKDataObject_FileIO.h  mdkVTKDataStructureConversion.h  mdkVTKDataStructureConversion.hpp
Source/Debug/: mdkDebug.h  mdkDebugConfig.h
Source/FeatureCodec/: mdkFeatureCodeBook.h  mdkFeatureCodeBook.hpp  mdkFeatureCodebookBuidler.h  mdkFeatureCodebookBuidler.hpp  mdkFeatureEncoder.h  mdkFeatureEncoder.hpp  mdkKMeansSoftAssignEncoder.h  mdkKMeansSoftAssignEncoder.hpp
Source/FeatureCoding/: mdkFeatureCoding_Common_Function.h  mdkFeatureCoding_Common_Function.hpp  mdkFeatureCoding_Common_Type.h  mdkFeatureDictionary.h  mdkFeatureDictionary.hpp  mdkFeatureDictionaryBasedDenseEncoder.h  mdkFeatureDictionaryBasedDenseEncoder.hpp  mdkFeatureDictionaryBasedEncoder.h  mdkFeatureDictionaryBasedEncoder.hpp  mdkFeatureDictionaryBasedSparseEncoder.h  mdkFeatureDictionaryBasedSparseEncoder.hpp  mdkFeatureDictionaryBuilder.h  mdkFeatureDictionaryBuilder.hpp  mdkFeatureDictionaryForCommonSparseEndocer.h  mdkFeatureDictionaryForCommonSparseEndocer.hpp  mdkFeatureDictionaryForDenseCoding.h  mdkFeatureDictionaryForDenseCoding.hpp  mdkFeatureDictionaryForSparseCoding.h  mdkFeatureDictionaryForSparseCoding.hpp  mdkFeatureEncoder.h  mdkFeatureEncoder.hpp  mdkFeatureEncoderDictionaryBuilder.h  mdkFeatureEncoderDictionaryBuilder.hpp  mdkFeatureSparseEncoder.h  mdkFeatureSparseEncoder.hpp  mdkKMeansDictionaryBuilder.h  mdkKMeansDictionaryBuilder.hpp  mdkKNNAverageDictionaryBuilder.h  mdkKNNAverageDictionaryBuilder.hpp  mdkKNNAverageOnlineDictionaryBuilder.h  mdkKNNAverageOnlineDictionaryBuilder.hpp  mdkKNNBasisSelectMergeOnlineDictionaryBuilder.h  mdkKNNBasisSelectMergeOnlineDictionaryBuilder.hpp  mdkKNNBasisSelectionAndKNNAverageBasedOnlineDictionaryBuilder.h  mdkKNNBasisSelectionAndKNNAverageBasedOnlineDictionaryBuilder.hpp  mdkKNNBasisSelectionAndKNNAverageOnlineDictionaryBuilder.h  mdkKNNBasisSelectionAndKNNAverageOnlineDictionaryBuilder.hpp  mdkKNNBasisSelectionBasedInitialDictionaryBuilder.h  mdkKNNBasisSelectionBasedInitialDictionaryBuilder.hpp  mdkKNNBasisSelectionOnlineDictionaryBuilder.h  (+23 more)
Source/FileIO/: mdkCurve_FileIO.h  mdkCurve_FileIO.hpp  mdkFileIO.cpp  mdkFileIO.h  mdkFileIO.hpp  mdkFileIO_Common.h  mdkFileIO_Common.hpp  mdkFileIO_Curve.h  mdkFileIO_Curve.hpp  mdkFileIO_DenseImage3D.h  mdkFileIO_DenseImage3D.hpp  mdkFileIO_DenseMatrix.h  mdkFileIO_DenseMatrix.hpp  mdkFileIO_FeatureDictionaryForSpareCoding.h  mdkFileIO_FeatureDictionaryForSpareCoding.hpp  mdkFileIO_Image3D.h  mdkFileIO_Image3D.hpp  mdkFileIO_Json.h  mdkFileIO_Json.hpp  mdkFileIO_PolygonMesh.h  mdkFileIO_PolygonMesh.hpp  mdkFileIO_TriangleMesh.h  mdkFileIO_TriangleMesh.hpp  mdkTextFile.cpp  mdkTextFile.h
Source/Geometry/: mdkGeometry.h  mdkGeometry2D.h  mdkGeometry3D.h  mdkGeometry3D_Function_Part_0.hpp  mdkGeometry_Function_Part_0.h  mdkGeometry_Function_Part_0.hpp
Source/Image/: mdk3DImage.h  mdk3DImage.hpp  mdk3DImageVectorVoxelWithFixedSize.h  mdk3DImageVectorVoxelWithVariableSize.hpp  mdk3DImageVectorVoxelWithVariableSize_Function.hpp  mdk3DImageVoxel.h  mdkDenseImage2D.h  mdkDenseImage2D.hpp  mdkDenseImage2D_FileIO.h  mdkDenseImage2D_FileIO.hpp  mdkDenseImage3D.h  mdkDenseImage3D.hpp  mdkDenseImage3D_FileIO.h  mdkDenseImage3D_FileIO.hpp  mdkImage.h  mdkImage.hpp  mdkImage2D.h  mdkImage2D.hpp  mdkImage3D.h  mdkImage3D.hpp  mdkImageConfig.h  mdkImageInfo.h  mdkImageInfo2D.h  mdkImageInfo2D.hpp  mdkImageInfo3D.h  mdkImageInfo3D.hpp  mdkImageSequence.h  mdkScalarImage2D.h  mdkScalarImage2D.hpp  mdkScalarImage3D.h  mdkScalarImage3D.hpp  mdkSparseImage2D.h  mdkSparseImage2D.hpp  mdkSparseImage3D.h  mdkSparseImage3D.hpp  mdkVectorImage2D.h  mdkVectorImage2D.hpp  mdkVectorImage3D.h  mdkVectorImage3D.hpp  mdkVectorVoxelWithFixedSize.h  (+9 more)
Source/ImageData/: mdk3DImage.h  mdk3DImage.hpp  mdk3DImageConfig.h  mdk3DImageSequence.hpp  mdk3DImageVectorVoxelWithFixedSize.h  mdk3DImageVectorVoxelWithFixedSize.hpp  mdk3DImageVectorVoxelWithFixedSize_Function.h  mdk3DImageVectorVoxelWithFixedSize_Function.hpp  mdk3DImageVectorVoxelWithVariableSize.h  mdk3DImageVectorVoxelWithVariableSize.hpp  mdk3DImageVectorVoxelWithVariableSize_Function.h  mdk3DImageVectorVoxelWithVariableSize_Function.hpp  mdk3DImageVoxel.h  (+5 more)
(+1049 files in other folders)
